fix: setup step

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,11 @@ jobs:
 
       - name: Pick deno version
         id: deno
-        run: echo ::set-output name=deno_version::$(grep deno .tool-versions | awk '{print $2}')
+        run: echo "version=$(grep deno .tool-versions | awk '{print $2}')" >> $GITHUB_OUTPUT
 
       - uses: denoland/setup-deno@v1
         with:
-          deno-version: ${{ steps.tfenv.outputs.deno_version }}
+          deno-version: ${{ steps.deno.outputs.version }}
 
       - name: Check format
         run: deno fmt --check
